@@ -10,7 +10,8 @@ enum TokenType {
   EQUAL, EQUAL_EQUAL,
   GREATER, GREATER_EQUAL,
   LESSER, LESSER_EQUAL,
-  PLUS_EQUAL, MINUS_EQUAL, 
+  PLUS_EQUAL, MINUS_EQUAL,
+  PLUS_PLUS, MINUS_MINUS,
   STAR_EQUAL, SLASH_EQUAL, 
   MOD, MOD_EQUAL,
   EXP, EXP_EQUAL,
